# Financial-Data-Pipeline

./: .gitignore  README.md  __init__.py  conftest.py  connect_db.sh  docker-compose.yml  handle_errors.md  pipeline_status_report.py  pyproject.toml  requirements.txt  run_pipeline.py
.github/workflows/: ci.yml  test.yml
config/: pipeline_config.json
financial-data-pipeline/src/common/: logger.py
financial-data-pipeline/tests/: test_smoke.py
financial-data-pipeline/tools/: run_pipeline_cli.py
notebooks/: exodus_demo.ipynb
src/data_etl/pipelines/: __init__.py  config_manager.py  crypto_pipeline.py  example_usage.py
src/data_etl/processing/: __init__.py  data_cleaner.py  data_normalizer.py  data_splitter.py  enhanced_metadata_manager.py  technical_indicators.py  timeframe_aggregator.py
src/data_etl/providers/crypto/: binance_provider.py  bybit_downloader.py
src/data_etl/providers/tests/: __init__.py
src/data_etl/raw/: __init__.py  data_archiver.py  data_backup.py  data_compressor.py  test.csv
src/data_etl/raw/metadata/: test.json
src/data_etl/storage/: __init__.py  data_storage_manager.py  metadata_db.py  postgresql_storage.py  timescaledb_schema.sql  timeseries_db.py
src/data_etl/utils/: config.py  logging.py
src/data_etl/validation/: __init__.py  data_processor.py  data_validator.py  simple_validator.py
src/data_etl/validation/tests/: test_data_validator.py
tests/: __init__.py  setup_test_db.py
tests/units/: test_bybit_downloader.py  test_data_processor.py  test_data_splitter.py  test_data_storage_manager.py  test_processing.py
