[project]
name = "data-etl"
version = "0.1.0"
description = ""
authors = [
    {name = "DataBridge",email = "jose.trader89@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.20.0",
    "requests>=2.28.0",
    "matplotlib>=3.5.0",
    "psycopg2-binary>=2.9.0",
    "sqlalchemy>=2.0.0",
    "pytest>=7.0.0",
    "notebook>=6.4.0",
    "scikit-learn>=1.0.0",
    "pathlib>=1.0.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
